--- a/amplify/backend/auth/luckymoneyf2f00b99/luckymoneyf2f00b99-cloudformation-template.yml
+++ b/amplify/backend/auth/luckymoneyf2f00b99/luckymoneyf2f00b99-cloudformation-template.yml
@@ -103,7 +103,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'luckym6e11270a_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'luckymf2f00b99_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -115,10 +115,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: luckym6e11270a_role_external_id
+                sts:ExternalId: luckymf2f00b99_role_external_id
       Policies: 
         - 
-          PolicyName: luckym6e11270a-sns-policy
+          PolicyName: luckymf2f00b99-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -166,7 +166,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: luckym6e11270a_role_external_id
+        ExternalId: luckymf2f00b99_role_external_id
     
   
   UserPoolClientWeb:
@@ -174,7 +174,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: luckym6e11270a_app_clientWeb
+      ClientName: luckymf2f00b99_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -184,7 +184,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: luckym6e11270a_app_client
+      ClientName: luckymf2f00b99_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -237,7 +237,7 @@ Resources:
             - ' }'
             - '};'
       Handler: index.handler
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: '300'
       Role: !GetAtt 
         - UserPoolClientRole
@@ -249,7 +249,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: luckym6e11270a_userpoolclient_lambda_iam_policy
+      PolicyName: luckymf2f00b99_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -266,7 +266,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: luckym6e11270a_userpoolclient_lambda_log_policy
+      PolicyName: luckymf2f00b99_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -306,7 +306,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'luckymoney6e11270a_identitypool_6e11270a', !Join ['',['luckymoney6e11270a_identitypool_6e11270a', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'luckymoneyf2f00b99_identitypool_f2f00b99', !Join ['',['luckymoneyf2f00b99_identitypool_f2f00b99', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
